# tbilisi-apts

./: .gitignore  README.md  docker-compose.yml
bot/: .env.example  Dockerfile  README.md  pyproject.toml
bot/bot/: config.py  main.py
ops-tools/: local-ops.Dockerfile
ops-tools/kubernetes/: bot-deployment.yaml  kafka-deployment.yaml  redis-deployment.yaml  scheduler-deployment.yaml  scraper-deployment.yaml  zookeeper-deployment.yaml
ops-tools/terraform/: ecr.tf  outputs.tf  rds.tf  vpc.tf
ops-tools/terraform/eks/: eks-cluster.tf
scheduler/: .env.example  Dockerfile  README.md  pyproject.toml
scheduler/scheduler/: config.py  logger.py  main.py
scheduler/scheduler/db/: connection.py
scheduler/scheduler/db/migrations/: init.sql
scheduler/scheduler/db/repositories/: user_settings.py
scheduler/scheduler/domain/entities/: user_setting.py
scraper/: .env.example  Dockerfile  README.md  items.jsonl  nohup.out  pyproject.toml  run-scrapy-server.sh  scrapy.cfg
scraper/scraper/: items.py  pipelines.py  selectors.py  settings.py
scraper/scraper/spiders/: my_home_spider.py
