[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["IamIknow <stepanov.serge97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.7.0"
black = "^22.10.0"
scrapyd = "^1.3.0"
scrapyd-client = "^1.2.2"
kafka-python = "^2.0.2"
redis = {extras = ["hiredis"], version = "^4.3.5"}
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
